# claudshi

./: .gitignore  .mcp.json  CLAUDE.md  LICENSE  README.md  pyproject.toml
.claude/skills/analyze/: SKILL.md
.claude/skills/bet/: SKILL.md
.claude/skills/config/: SKILL.md
.claude/skills/cs_analyze/: SKILL.md
.claude/skills/cs_bet/: SKILL.md
.claude/skills/cs_config/: SKILL.md
.claude/skills/cs_exit/: SKILL.md
.claude/skills/cs_journal/: SKILL.md
.claude/skills/cs_monitor/: SKILL.md
.claude/skills/cs_portfolio/: SKILL.md
.claude/skills/cs_scan/: SKILL.md
.claude/skills/exit/: SKILL.md
.claude/skills/journal/: SKILL.md
.claude/skills/monitor/: SKILL.md
.claude/skills/portfolio/: SKILL.md
.claude/skills/scan/: SKILL.md
docs/: PROMPT.md  TASKS.yaml  USAGE.md  WEB_APP_PLAN.md
lib/: formatting.py  memory.py  risk.py
skills/: analyze.md  bet.md  config.md  cs_analyze.md  cs_bet.md  cs_config.md  cs_exit.md  cs_journal.md  cs_monitor.md  cs_portfolio.md  cs_scan.md  exit.md  journal.md  monitor.md  portfolio.md  scan.md
tests/: test_formatting.py  test_memory.py  test_risk.py
